force-app/main/default/objects/Obstacle__c/Obstacle__c.object-meta.xml
<CustomObject>
    <label>Obstacle</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Obstacle Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obstacles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>